--- a/_doc/sphinxdoc/source/lectures/2020.rst
+++ b/_doc/sphinxdoc/source/lectures/2020.rst
@@ -237,6 +237,7 @@
     le capitalisme introduit un *corps mort étranger* dans
     l'économie. Il faut donc rétablir l'équilibre.
 
+    Pour cela Silvio Gesel propose de faire rouiller
     les billets en introduisant le principe de monnaie
     fondante : toute monnaie qui n'est pas échangée
     perd de sa valeur.
